welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: Boolean does not take parameters
while (danse()){
            ^